--- a/begginer_2/package.json
+++ b/begginer_2/package.json
@@ -34,7 +34,11 @@
     "namespaces": "ts-node-dev --respawn src/namespaces.ts",
     "inheritance": "ts-node-dev --respawn src/inheritance.ts",
     "abstract-class": "ts-node-dev --respawn src/abstract-classes.ts",
-    "re-interfaces": "ts-node-dev --respawn src/return-of-interfaces.ts"
+    "re-interfaces": "ts-node-dev --respawn src/return-of-interfaces.ts",
+    "generics": "ts-node-dev --respawn src/generics.ts",
+    "as-const": "ts-node-dev --respawn src/as-const.ts",
+    "nullable": "ts-node-dev --respawn src/nullable.ts",
+    "index": "ts-node-dev --respawn src/index-signatures.ts"
   },
   "keywords": [],
   "author": "",
