--- a/begginer_2/package.json
+++ b/begginer_2/package.json
@@ -4,41 +4,55 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "boolean": "ts-node-dev --respawn src/boolean.ts",
-    "array": "ts-node-dev --respawn src/array.ts",
-    "number": "ts-node-dev --respawn src/number.ts",
-    "tuple": "ts-node-dev --respawn src/tuple.ts",
-    "any": "ts-node-dev --respawn src/any.ts",
-    "void": "ts-node-dev --respawn src/void.ts",
-    "null": "ts-node-dev --respawn src/null-and-undefined.ts",
-    "never": "ts-node-dev --respawn src/never.ts",
-    "object": "ts-node-dev --respawn src/object.ts",
-    "aliases": "ts-node-dev --respawn src/type-aliases.ts",
-    "interfaces": "ts-node-dev --respawn src/interfaces.ts",
-    "unknown": "ts-node-dev --respawn src/unknown.ts",
-    "intersection": "ts-node-dev --respawn src/intersection.ts",
-    "union": "ts-node-dev --respawn src/union.ts",
-    "literal": "ts-node-dev --respawn src/literal.ts",
-    "enum": "ts-node-dev --respawn src/enum.ts",
-    "anonymous": "ts-node-dev --respawn src/anonymous-function.ts",
-    "arrow": "ts-node-dev --respawn src/arrow-function.ts",
-    "optional": "ts-node-dev --respawn src/optional-arguments.ts",
-    "rest": "ts-node-dev --respawn src/rest-parameters.ts",
-    "overloads": "ts-node-dev --respawn src/overloads.ts",
-    "first-class": "ts-node-dev --respawn src/first-class.ts",
-    "access-modifiers": "ts-node-dev --respawn src/access-modifiers.ts",
-    "more-constructor": "ts-node-dev --respawn src/more-constructor.ts",
-    "g-s": "ts-node-dev --respawn src/getter-setter.ts",
-    "readonly": "ts-node-dev --respawn src/readonly.ts",
-    "static": "ts-node-dev --respawn src/static-members.ts",
-    "namespaces": "ts-node-dev --respawn src/namespaces.ts",
-    "inheritance": "ts-node-dev --respawn src/inheritance.ts",
-    "abstract-class": "ts-node-dev --respawn src/abstract-classes.ts",
-    "re-interfaces": "ts-node-dev --respawn src/return-of-interfaces.ts",
-    "generics": "ts-node-dev --respawn src/generics.ts",
-    "as-const": "ts-node-dev --respawn src/as-const.ts",
-    "nullable": "ts-node-dev --respawn src/nullable.ts",
-    "index": "ts-node-dev --respawn src/index-signatures.ts"
+    "----Basic Type":  "",
+    "boolean": "ts-node-dev --respawn src/basic_type/boolean.ts",
+    "array": "ts-node-dev --respawn src/basic_type/array.ts",
+    "number": "ts-node-dev --respawn src/basic_type/number.ts",
+    "tuple": "ts-node-dev --respawn src/basic_type/tuple.ts",
+    "any": "ts-node-dev --respawn src/basic_type/any.ts",
+    "void": "ts-node-dev --respawn src/basic_type/void.ts",
+    "null": "ts-node-dev --respawn src/basic_type/null.ts",
+    "never": "ts-node-dev --respawn src/basic_type/never.ts",
+    "object": "ts-node-dev --respawn src/basic_type/object.ts",
+    "aliases": "ts-node-dev --respawn src/basic_type/type-aliases.ts",
+    "interfaces": "ts-node-dev --respawn src/basic_type/interfaces.ts",
+    "unknown": "ts-node-dev --respawn src/basic_type/unknown.ts",
+    "intersection": "ts-node-dev --respawn src/basic_type/intersection.ts",
+    "union": "ts-node-dev --respawn src/basic_type/union.ts",
+    "literal": "ts-node-dev --respawn src/basic_type/literal.ts",
+    "enum": "ts-node-dev --respawn src/basic_type/enum.ts",
+    "----Function":  "",
+    "anonymous": "ts-node-dev --respawn src/function/anonymous-function.ts",
+    "arrow": "ts-node-dev --respawn src/function/arrow-function.ts",
+    "optional": "ts-node-dev --respawn src/function/optional-arguments.ts",
+    "rest": "ts-node-dev --respawn src/function/rest-parameters.ts",
+    "overloads": "ts-node-dev --respawn src/function/overloads.ts",
+    "----Class Type":  "",
+    "first-class": "ts-node-dev --respawn src/class_type/first-class.ts",
+    "access-modifiers": "ts-node-dev --respawn src/class_type/access-modifiers.ts",
+    "more-constructor": "ts-node-dev --respawn src/class_type/more-constructor.ts",
+    "g-s": "ts-node-dev --respawn src/class_type/getter-setter.ts",
+    "readonly": "ts-node-dev --respawn src/class_type/readonly.ts",
+    "static": "ts-node-dev --respawn src/class_type/static-members.ts",
+    "namespaces": "ts-node-dev --respawn src/class_type/namespaces.ts",
+    "inheritance": "ts-node-dev --respawn src/class_type/inheritance.ts",
+    "abstract-class": "ts-node-dev --respawn src/class_type/abstract-classes.ts",
+    "re-interfaces": "ts-node-dev --respawn src/class_type/return-of-interfaces.ts",
+    "----Altitude Class Type":  "",
+    "generics": "ts-node-dev --respawn src/altitude_class_type/generics.ts",
+    "as-const": "ts-node-dev --respawn src/altitude_class_type/as-const.ts",
+    "nullable": "ts-node-dev --respawn src/altitude_class_type/nullable.ts",
+    "index": "ts-node-dev --respawn src/altitude_class_type/index-signatures.ts",
+    "----Utility": "",
+    "partial-required": "ts-node-dev --respawn src/utility/partial-required.ts",
+    "mapped": "ts-node-dev --respawn src/utility/mapped-types.ts",
+    "utility-readonly": "ts-node-dev --respawn src/utility/utility-types-readonly.ts",
+    "record": "ts-node-dev --respawn src/utility/record.ts",
+    "exclude": "ts-node-dev --respawn src/utility/exclude-extract-nonnullable.ts",
+    "pick": "ts-node-dev --respawn src/utility/pick-omit.ts",
+    "return": "ts-node-dev --respawn src/utility/return-type.ts",
+    "parameters": "ts-node-dev --respawn src/utility/parameters.ts",
+    "constructor-parameters": "ts-node-dev --respawn src/utility/constructor-parameters.ts"
   },
   "keywords": [],
   "author": "",
