--- a/nodejs_2/package.json
+++ b/nodejs_2/package.json
@@ -18,6 +18,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.5"
   }
